--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=SpringBoot2002!
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
